tests/rosetta/out/Smalltalk/abelian-sandpile-model.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abelian-sandpile-model.st:25: invalid assignment to argument pile
/workspace/mochi/tests/rosetta/out/Smalltalk/abelian-sandpile-model.st:67: parse error, expected '|' or identifier
