tests/rosetta/out/Smalltalk/abelian-sandpile-model.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| dim newPile b y row x handlePile drawPile chars line col v main pile hdim |
dim := 16.
newPile := [:d | b := {}.
y := 0.
[(y < d)] whileTrue: [.
row := {}.
x := 0.
[(x < d)] whileTrue: [.
row := row copyWith: 0.
x := (x + 1).
].
.
b := b copyWith: row.
y := (y + 1).
].
.
b. ].
handlePile := [:pile :x :y | (((pile at: y at: x) >= 4)) ifTrue: [
pile at: y at: x put: ((pile at: y at: x) - 4).
((y > 0)) ifTrue: [
pile at: (y - 1) at: x put: ((pile at: (y - 1) at: x) + 1).
(((pile at: (y - 1) at: x) >= 4)) ifTrue: [
pile := handlePile value: pile value: x value: (y - 1).
] .
] .
((x > 0)) ifTrue: [
pile at: y at: (x - 1) put: ((pile at: y at: (x - 1)) + 1).
(((pile at: y at: (x - 1)) >= 4)) ifTrue: [
pile := handlePile value: pile value: (x - 1) value: y.
] .
] .
((y < ((dim - 1)))) ifTrue: [
pile at: (y + 1) at: x put: ((pile at: (y + 1) at: x) + 1).
(((pile at: (y + 1) at: x) >= 4)) ifTrue: [
pile := handlePile value: pile value: x value: (y + 1).
] .
] .
((x < ((dim - 1)))) ifTrue: [
pile at: y at: (x + 1) put: ((pile at: y at: (x + 1)) + 1).
(((pile at: y at: (x + 1)) >= 4)) ifTrue: [
pile := handlePile value: pile value: (x + 1) value: y.
] .
] .
pile := handlePile value: pile value: x value: y.
] .
pile. ].
drawPile := [:pile :d | chars := {' '. '░'. '▓'. '█'}.
row := 0.
[(row < d)] whileTrue: [.
line := ''.
col := 0.
[(col < d)] whileTrue: [.
v := pile at: row at: col.
((v > 3)) ifTrue: [
v := 3.
] .
line := (line + (chars at: v)).
col := (col + 1).
].
.
Transcript show: (line) printString; cr.
row := (row + 1).
].
. ].
main := [ pile := newPile value: 16.
hdim := 7.
pile at: hdim at: hdim put: 16.
pile := handlePile value: pile value: hdim value: hdim.
drawPile value: pile value: 16. ].
main value.
